# lichen-frontend

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: index.slint  theme.slint
ui/components/: index.slint  page.slint
ui/components/clientwindow/: contentview.slint  controls.slint  dropshadow.slint  index.slint  titlebar.slint  window.slint
ui/components/page/: container.slint  index.slint  page.slint
ui/components/sidebar/: index.slint  item.slint  sidebar.slint
ui/model/: icontext.slint  index.slint
ui/views/: disks.slint  index.slint  locale.slint  mainwindow.slint  splash.slint
